[gd_scene load_steps=4 format=3 uid="uid://cgawmsaxesbgn"]

[ext_resource type="Script" uid="uid://6v0a3air6ay6" path="res://scenes/interactive/mountain.gd" id="1_k3x57"]
[ext_resource type="Texture2D" uid="uid://cejgkvhh4sq54" path="res://art/interactive/mountain_frozen.png" id="2_81kgg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_57dch"]
size = Vector2(391, 375)

[node name="Area2D" type="Area2D"]
collision_layer = 0
collision_mask = 128
script = ExtResource("1_k3x57")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_81kgg")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(125, 133)
polygon = PackedVector2Array(-217, -48, -148, -19, -41, 25, 28, 16, 43, -3, 38, -38, -39, -127, -74, -170, -102, -171, -142, -171, -159.855, -151.284, -171.855, -128.284, -194.855, -121.284)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(24, 44.5)
shape = SubResource("RectangleShape2D_57dch")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-166, 45, -96, 89, 84, 162, 153, 153, 172, 130, 168, 93, 54, -43, -18, -45, -29, -106, -52, -146, -97, -136, -124, -66)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
